tinyc/test/bad/null-redeclare-variable.c
int main()
{
    int NULL = 3;
    return 0;
}
